2010-07-06  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Joseph Pecoraro.

        Web Inspector: provide line numbers for inline styles.

        https://bugs.webkit.org/show_bug.cgi?id=41691

        * http/tests/inspector/inspector-test.js:
        (runAfterIframeIsLoaded.step):
        (runAfterIframeIsLoaded):
        * inspector/elements-tests.js:
        * inspector/resources/styles-source-lines-inline-iframe.html: Added.
        * inspector/styles-iframe.html:
        * inspector/styles-source-lines-expected.txt: Removed.
        * inspector/styles-source-lines-inline-expected.txt: Added.
        * inspector/styles-source-lines-inline.html: Added.
        * inspector/styles-source-lines.html:

2010-07-07  Adam Barth  <abarth@webkit.org>

        Unreviewed.

        Clean up Alexey's mess from http://trac.webkit.org/changeset/62576
        https://bugs.webkit.org/show_bug.cgi?id=41156

        I think these results are correct, but I don't really know for sure.
        What I do know is that he left this failure in the tree for 12 hours.

        * fast/xmlhttprequest/xmlhttprequest-no-file-access-expected.txt:
        * fast/xmlhttprequest/xmlhttprequest-nonexistent-file-expected.txt:

2010-07-06  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Implement start table tag in table mode
        https://bugs.webkit.org/show_bug.cgi?id=41736

        * html5lib/runner-expected-html5.txt:

2010-07-06  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Fix <nobr><nobr> case in HTMLTreeBuilder
        https://bugs.webkit.org/show_bug.cgi?id=41735

        * html5lib/runner-expected-html5.txt:

2010-07-06  Kent Tamura  <tkent@chromium.org>

        Unreviewed, test expectation update.

        Update expectation files for fast/forms/indeterminate.html. Chromium
        started to support them on Windows and Linux recently.

        * platform/chromium-linux/fast/forms/indeterminate-expected.checksum: