@@ -8,13 +8,12 @@ PASS: page number of "page1-1" is 1
 PASS: page number of "page1-2" is 1
 PASS: page number of "page2" is 2
 PASS: page number of "page3" is 3
-PASS: page number of "page4" is 4
+FAIL: expected page number of "page4" is 4. Was 3
 PASS: page number of "page5" is 5
 PASS: page number of "page8" is 8
 PASS: page number of "page9-1" is 9
 PASS: page number of "page9-2" is 9
 PASS: page number of "page10" is 10
-All tests passed
 
 PASS successfullyParsed is true
 
